# docs/swagger.yaml
@@ -113,8 +113,6 @@ paths:
       summary: Adds a Movie Info
   /movies/{id}:
     delete:
-      consumes:
-      - application/json
       description: Deletes a movie in database
       parameters:
       - description: Delete Movie
@@ -134,6 +132,26 @@ paths:
       security:
       - bearerAuth: []
       summary: Deletes a Movie Info
+    get:
+      description: Displays a movie in database
+      parameters:
+      - description: Display Movie
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ""
+        "400":
+          description: ""
+        "401":
+          description: ""
+      security:
+      - bearerAuth: []
+      summary: Displays one movie detail
     put:
       consumes:
       - application/json
